--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -3,11 +3,11 @@
 <head>
     <title>AirBnB Clone Web Static</title>
 </head>
-<body>
+<body style="margin: 0; padding: 0;">
     <header style="background-color: #FF0000; height: 70px; width: 100%;">
     </header>
     <footer style="background-color: #00FF00; height: 60px; width: 100%;
-        position: Fixed; bottom: 0; align-items: center;"> Best School
+        position: Fixed; bottom: 0; align-items: center; text-align: center; display: flex; justify-content: center;"> Best School
     </footer>
 </body>
 </html>
