--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="styles/3-footer.css">
     <link rel="stylesheet" type="text/css" href="styles/6-filters.css">
     <link rel="icon" type="image/png" href="./images/icon.png">
-    <title>Airbnb Clone</title>
+    <title>AirBnB Clone Web Static</title>
 </head>
 
 <body>
@@ -36,7 +36,7 @@
             </div>
             <div class="amenities">
                 <h3>Amenities</h3>
-                <h4>Games, pool</h4>
+                <h4>Games, pool...</h4>
                 <ul class="popover">
                     <li>Internet</li>
                     <li>TV</li>
